# pinakey

./: .all-contributorsrc  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  USAGE.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/bamboo-config/: Cargo.toml
crates/bamboo-config/src/: flags.rs  lib.rs
crates/bamboo-core/: Cargo.toml
crates/bamboo-core/src/: bamboo_utils.rs  charset.rs  charset_def.rs  engine.rs  flattener.rs  input_method_def.rs  lib.rs  rules.rs  rules_parser.rs  spelling.rs  utils.rs
crates/bamboo-core/tests/: rules_parser.rs  transformation.rs  utils.rs
crates/bamboo-emoji/: Cargo.toml
crates/bamboo-emoji/src/: emoji.rs  lib.rs  mactab.rs  trie.rs
crates/bamboo-ibus/: Cargo.toml
crates/bamboo-ibus/examples/: smoketest.rs
crates/bamboo-ibus/src/: address.rs  constants.rs  core.rs  dbus.rs  engine_actor.rs  lib.rs  serialize.rs
crates/bamboo-platform/: Cargo.toml
crates/bamboo-platform/src/: lib.rs  x11.rs
crates/ibus-bamboo/: Cargo.toml
crates/ibus-bamboo/src/: main.rs
crates/pinakey/: Cargo.toml
crates/pinakey-config/: Cargo.toml
crates/pinakey-config/src/: flags.rs  lib.rs
crates/pinakey-config/tests/: broken_stderr.rs
crates/pinakey-core/: Cargo.toml
crates/pinakey-core/data/: words.txt
crates/pinakey-core/src/: charset.rs  charset_def.rs  dict.rs  engine.rs  flattener.rs  input_method_def.rs  lib.rs  rules.rs  rules_parser.rs  spelling.rs  transform_utils.rs  utils.rs
crates/pinakey-core/tests/: rules_parser.rs  transformation.rs  utils.rs
crates/pinakey-emoji/: Cargo.toml
crates/pinakey-emoji/src/: emoji.rs  fuzzy.rs  lib.rs  mactab.rs  recent.rs  trie.rs
crates/pinakey-engine/: Cargo.toml
crates/pinakey-engine/benches/: latency.rs
crates/pinakey-engine/data/: transport-rules.conf
crates/pinakey-engine/src/: engine.rs  keysym.rs  lib.rs  transport.rs
crates/pinakey-engine/tests/: hyper_modifier_probe.rs  macro_source.rs  reload_source.rs
crates/pinakey-ffi/: Cargo.toml  cbindgen.toml
crates/pinakey-ffi/include/: pinakey_ffi.h
crates/pinakey-ffi/src/: lib.rs
crates/pinakey-ibus/: Cargo.toml
crates/pinakey-ibus/examples/: backspace_smoketest.rs  emoji_smoketest.rs  open_settings_smoketest.rs  shortcut_props_smoketest.rs  smoketest.rs
crates/pinakey-ibus/src/: address.rs  backspace.rs  constants.rs  core.rs  dbus.rs  engine_actor.rs  lib.rs  lookup.rs  props.rs  serialize.rs  shortcuts.rs
crates/pinakey-platform/: Cargo.toml
crates/pinakey-platform/src/: inject.rs  lib.rs  x11.rs
crates/pinakey-settings/: Cargo.toml
crates/pinakey-settings/src/: controller.rs  fonts.rs  gui.rs  lib.rs  main.rs
crates/pinakey/src/: main.rs
docs/: BENCHMARK.md
docs/superpowers/specs/: 2026-06-18-pinakey-design.md  2026-06-18-rust-ibus-bamboo-design.md
fcitx5/: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
fcitx5/server/: 99-pinakey-uinput.rules  CMakeLists.txt  peerauth.h  pinakey-server.cpp  pinakey-uinput-server.service  pinakey-uinput.conf  serversocket.h
fcitx5/src/: CMakeLists.txt  filewatch.h  pinakey-addon.conf.in  pinakey.conf.in  pinakey.cpp  pinakey.h  socketpath.h  uinputclient.h  utf8util.h
fcitx5/test/: CMakeLists.txt  testfilewatch.cpp  testpeerauth.cpp  testpinakey.cpp  testpinakey_nounderline.cpp  testserversocket.cpp  testsocketpath.cpp  testuinputack.cpp  testuinputclient.cpp  testutf8util.cpp
fcitx5/test/e2e/: pinakey_e2e.py
packaging/: PKGBUILD  README.md  flake.nix
packaging/deb/: postinst  postrm
tools/: bench.sh  check-versions.sh  enable-input-source.sh  gen-ffi-header.sh  gen_charset.py  install-deb.sh  install-fcitx5.sh  install-online.sh  install.sh  run-e2e.sh  uninstall.sh
