[package]
name = "bamboo-emoji"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Emoji trie lookup and macro table for ibus-bamboo (Rust port of emoji.go/trie.go/mactab.go)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
