[package]
name = "bamboo-ibus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IBus engine layer for ibus-bamboo (Rust port of engine*.go over zbus)"

[features]
default = ["dbus"]
dbus = ["dep:zbus", "dep:serde", "dep:tokio", "dep:bamboo-platform"]

[dependencies]
bamboo-core = { path = "../bamboo-core" }
bamboo-config = { path = "../bamboo-config" }
bamboo-emoji = { path = "../bamboo-emoji" }
bamboo-platform = { path = "../bamboo-platform", optional = true }
zbus = { version = "5", optional = true, features = ["tokio"] }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
