[package]
name = "ibus-bamboo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vietnamese IBus input method engine (Rust port of BambooEngine/ibus-bamboo)"

[[bin]]
name = "ibus-bamboo"
path = "src/main.rs"

[dependencies]
bamboo-ibus = { path = "../bamboo-ibus" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
