[package]
name = "pinakey-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Config load/save and feature flags for PinaKey"

[dependencies]
pinakey-core = { path = "../pinakey-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[lints]
workspace = true

[dev-dependencies]
libc = "0.2"
