[package]
name = "pinakey-emoji"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Emoji trie lookup and macro table for PinaKey"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
