[package]
name = "pinakey-ibus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IBus engine layer for PinaKey (zbus D-Bus transport)"

[features]
default = ["dbus"]
dbus = ["dep:zbus", "dep:serde", "dep:tokio", "dep:pinakey-platform"]

[dependencies]
pinakey-core = { path = "../pinakey-core" }
pinakey-config = { path = "../pinakey-config" }
pinakey-emoji = { path = "../pinakey-emoji" }
pinakey-platform = { path = "../pinakey-platform", optional = true }
zbus = { version = "5", optional = true, features = ["tokio"] }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
futures-util = "0.3"

[lints]
workspace = true
