[package]
name = "pinakey"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PinaKey — Vietnamese IBus input method engine"

[[bin]]
name = "pinakey"
path = "src/main.rs"

[dependencies]
pinakey-ibus = { path = "../pinakey-ibus" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
